--- a/Ecart/package.json
+++ b/Ecart/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "clean": "npx react-native start --reset-cache",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -26,8 +27,10 @@
     "react-native-screens": "^4.18.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^15.15.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-redux": "^9.2.0",
+    "realm": "^20.2.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
